Clean up TypeUtils a bit
Use instanceof pattern and local variable type inference.

Change-Id: Ia2baf2e80b86c5e6a719f9da9f591b00a785d67b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>